clusters/homelab/apps/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    expose-public: "true"
    pod-security.kubernetes.io/enforce: restricted
