clusters/homelab/apps/ntfy/service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-metrics
  namespace: ntfy
  labels:
    app: ntfy-metrics
spec:
  selector:
    app: ntfy
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
