clusters/homelab/apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: http
