clusters/homelab/apps/ntfy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  namespace: ntfy
spec:
  parentRefs:
    - name: cf-tunnel
      namespace: kube-system
  hostnames:
    - ntfy.tylerrosnett.com
  rules:
    - backendRefs:
        - name: ntfy
          port: 80
